fix: sidebar z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,7 @@ app-side-nav-bar {
   position: fixed;
   left: 0rem;
   width: 0px;
-  z-index: 2;
+  z-index: 3;
   height: calc(100vh - 4rem);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(34, 34, 34, 1);
